Vectorized NNUE Updates (#95)
* fix

* Fix

* Fix